@@ -1,3 +1,8 @@
+2007-05-28  Paul Walmsley <paul@booyaka.com>
+
+	* usb.c: replace gp_port_usb_check_int_fast() calls with
+        timeout save/change/restore and gp_port_usb_check_int()
+
 2007-05-25  Paul Walmsley <paul@booyaka.com>
 
 	* library.c: fix bogus Canon EOS 5D USB product ID
